crux-mir/test/symb_eval/num/checked_add.good
test checked_add/3a1fbbbh::crux_test[0]: returned 44, FAILED

failures:

---- checked_add/3a1fbbbh::crux_test[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   test/symb_eval/num/checked_add.rs:5:5: 5:12: error: in checked_add/3a1fbbbh::crux_test[0]
[Crux]   attempt to add with overflow

[Crux] Overall status: Invalid.
